--- a/main.html
+++ b/main.html
@@ -8,7 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p id="yellow">para-1</p>
+	<div class=yellow>
+		<p id="yellow">para-1</p>
+	</div>
+	
 	<p id="red">para-2</p>
 	<p id="green">para-3</p>
     <script type="text/javascript" src="./script.js">
